fixed main overflow

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,6 @@ main{
 }
 
 #cards{
-    overflow: auto;
     height: calc(100% - 100px);
     width: 100%;
     background-color: rgb(248,249,250);
